Show single competition (View and ViewModel)

--- a/ProjektSemestrIV/App.xaml
+++ b/ProjektSemestrIV/App.xaml
@@ -37,5 +37,9 @@
         <DataTemplate DataType="{x:Type viewmodels:ShowShootersViewModel}">
             <views:ShowShootersView/>
         </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewmodels:ShowCompetitionViewModel}">
+            <views:ShowCompetitionView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
