--- a/ProjektSemestrIV/Views/ShowShootersView.xaml
+++ b/ProjektSemestrIV/Views/ShowShootersView.xaml
@@ -12,8 +12,8 @@
                   AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Id}}" Binding="{Binding ID}" Width="100"/>
-                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Name}}" Binding="{Binding Name}" Width="200"/>
-                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Surname}}" Binding="{Binding Surname}" Width="200"/>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.ShooterName}}" Binding="{Binding Name}" Width="200"/>
+                <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.ShooterSurname}}" Binding="{Binding Surname}" Width="200"/>
             </DataGrid.Columns>
         </DataGrid>
     </StackPanel>
