--- a/ProjektSemestrIV/Views/ShowSelectedShooterView.xaml
+++ b/ProjektSemestrIV/Views/ShowSelectedShooterView.xaml
@@ -1,13 +1,11 @@
-﻿<UserControl x:Class="ProjektSemestrIV.Views.ShootersView"
+﻿<UserControl x:Class="ProjektSemestrIV.Views.SelectedShooterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ProjektSemestrIV.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Background="White">
-    <Grid>
-        <Label Content="ShootersView" FontSize="30"/>
-    </Grid>
-</UserControl>
+             d:DesignHeight="450" d:DesignWidth="800">
+    <TabControl>
+    </TabControl>
+    </UserControl>
