--- a/ProjektSemestrIV/Views/ShowSelectedCompetitionView.xaml
+++ b/ProjektSemestrIV/Views/ShowSelectedCompetitionView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:resx="clr-namespace:ProjektSemestrIV.Properties"
              xmlns:local="clr-namespace:ProjektSemestrIV.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -22,47 +23,47 @@
                 </Grid.ColumnDefinitions>
 
                 <Label Grid.Row="0" Grid.Column="0"
-                       Content="Data trwania"/>
+                       Content="{Binding Source={x:Static resx:Resources.DurationDate}}"/>
                 <Label Grid.Row="0" Grid.Column="1"
                        Content="{Binding DurationDate, Mode=OneWay}"/>
 
                 <Label Grid.Row="1" Grid.Column="0"
-                       Content="Miejsce zawodów"/>
+                       Content="{Binding Source={x:Static resx:Resources.Location}}"/>
                 <Label Grid.Row="1" Grid.Column="1"
                        Content="{Binding Location, Mode=OneWay}"/>
 
                 <Label Grid.Row="2" Grid.Column="0"
-                       Content="Liczba uczestników"/>
+                       Content="{Binding Source={x:Static resx:Resources.NumberOfParticipants}}"/>
                 <Label Grid.Row="2" Grid.Column="1"
                        Content="{Binding ShootersCount, Mode=OneWay}"/>
 
                 <Label Grid.Row="3" Grid.Column="0"
-                       Content="Najszybszy czas przebiegu"/>
+                       Content="{Binding Source={x:Static resx:Resources.FastestRun}}"/>
                 <Label Grid.Row="3" Grid.Column="1"
                        Content="{Binding FastestShooter, Mode=OneWay}"/>
                 
                 <Label Grid.Row="4" Grid.Column="0"
-                       Content="Podium"/>
+                       Content="{Binding Source={x:Static resx:Resources.Podium}}"/>
                 <Label Grid.Row="4" Grid.Column="1"
                        Content="{Binding Podium, Mode=OneWay}"/>
             </Grid>
         </TabItem>
-        <TabItem Header="Lista tras">
+        <TabItem Header="{Binding Source={x:Static resx:Resources.ListStages}}">
             <DataGrid ItemsSource="{Binding Stages}" AutoGenerateColumns="False"
                       AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Nazwa trasy" Binding="{Binding StageName}"/>
-                    <DataGridTextColumn Header="Najlepszy gracz" Binding="{Binding BestPlayer}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.StageName}}" Binding="{Binding StageName}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.BestPlayer}}" Binding="{Binding BestPlayer}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </TabItem>
-        <TabItem Header="Lista zawodników">
+        <TabItem Header="{Binding Source={x:Static resx:Resources.ListShooters}}">
             <DataGrid ItemsSource="{Binding Shooters}" AutoGenerateColumns="False"
                       AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Imie" Binding="{Binding Name}"/>
-                    <DataGridTextColumn Header="Nazwisko" Binding="{Binding Surname}"/>
-                    <DataGridTextColumn Header="Zdobyty punkty" Binding="{Binding Points}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.ShooterName}}" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.ShooterSurname}}" Binding="{Binding Surname}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Points}}" Binding="{Binding Points}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </TabItem>
