--- a/ProjektSemestrIV/Views/ShowSelectedCompetitionView.xaml
+++ b/ProjektSemestrIV/Views/ShowSelectedCompetitionView.xaml
@@ -53,7 +53,7 @@
                       AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.StageName}}" Binding="{Binding StageName}"/>
-                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.BestPlayer}}" Binding="{Binding BestPlayer}"/>
+                    <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.BestShooter}}" Binding="{Binding BestPlayer}"/>
                     <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Points}}" Binding="{Binding Points}"/>
                 </DataGrid.Columns>
             </DataGrid>
