--- a/ProjektSemestrIV/Views/ShowCompetitionsView.xaml
+++ b/ProjektSemestrIV/Views/ShowCompetitionsView.xaml
@@ -5,17 +5,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:resx="clr-namespace:ProjektSemestrIV.Properties"
              xmlns:local="clr-namespace:ProjektSemestrIV.Views"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-        <DataGrid x:Name="DataGridCompetitions" ItemsSource="{Binding Competitions}"
-            AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True" AutoGenerateColumns="False">
+        <DataGrid x:Name="DataGridCompetitions" ItemsSource="{Binding Competitions}" 
+                  AlternatingRowBackground="Lavender" GridLinesVisibility="None" 
+                  IsReadOnly="True" AutoGenerateColumns="False"
+                  SelectedItem="{Binding SelectedCompetitionId, Mode=OneWayToSource}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Id}}" Binding="{Binding Id}" />
                 <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Location}}" Binding="{Binding Location}" Width="100"/>
                 <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.StartDate}}" Binding="{Binding StartDate}" Width="150"/>
                 <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.EndDate}}" Binding="{Binding EndDate}" Width="150"/>
             </DataGrid.Columns>
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding SwitchViewCommand}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </DataGrid>
     </StackPanel>
 </UserControl>
