--- a/ProjektSemestrIV/Views/ShowShootersView.xaml
+++ b/ProjektSemestrIV/Views/ShowShootersView.xaml
@@ -5,16 +5,24 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:resx="clr-namespace:ProjektSemestrIV.Properties"
              xmlns:local="clr-namespace:ProjektSemestrIV.Views"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
         <DataGrid ItemsSource="{Binding Shooters}" AutoGenerateColumns="False"
-                  AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True">
+                  AlternatingRowBackground="Lavender" GridLinesVisibility="None" IsReadOnly="True"
+                  SelectedItem="{Binding SelectedShooter}">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.Id}}" Binding="{Binding ID}" Width="100"/>
                 <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.ShooterName}}" Binding="{Binding Name}" Width="200"/>
                 <DataGridTextColumn Header="{Binding Source={x:Static resx:Resources.ShooterSurname}}" Binding="{Binding Surname}" Width="200"/>
             </DataGrid.Columns>
+
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDoubleClick">
+                    <i:InvokeCommandAction Command="{Binding SwitchViewCommand}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </DataGrid>
     </StackPanel>
 </UserControl>
