--- a/ProjektSemestrIV/App.xaml
+++ b/ProjektSemestrIV/App.xaml
@@ -36,5 +36,9 @@
         <DataTemplate DataType="{x:Type viewmodels:ShowShootersViewModel}">
             <views:ShowShootersView/>
         </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewmodels:ShowSelectedShooterInCompetitionViewModel}">
+            <views:ShowSelectedShooterInCompetition/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
